--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -13,31 +13,31 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [J] Journal Articles
 <ol reversed>
-<li>Maarif, M.R., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2024) Uncovering Sustainability Insights from Amazon’s Eco-Friendly Product Reviews for Design Optimization. Sustainability 2024, 16, 172. https://doi.org/10.3390/su16010172</li>
-<li>Alfian, G., Octava, M.Q.H., Hilmy, F.M., Nurhaliza, R.A., Saputra, Y.M., Putri, D.G.P., Syahrian, F., Fitriyani, N.L., Atmaji, F.T.D., Farooq, U., ... , <b>Syafrudin, M.*</b> (2023) Customer Shopping Behavior Analysis Using RFID and Machine Learning Models. Information 2023, 14, 551. https://doi.org/10.3390/info14100551</li>
-<li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311.</li>
-<li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., <b>Syafrudin, M.*</b> (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167.</li>
-<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729.</li>
-<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Yang, C.-K., Rhee, J., Anshari, M. (2023) Performance Analysis and Assessment of Type 2 Diabetes Screening Scores in Patients with Non-Alcoholic Fatty Liver Disease. Mathematics, 11, 2266, doi:10.3390/math11102266.</li>
-<li>Maarif, M.R., Saleh, A.R., Habibi, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Energy Usage Forecasting Model Based on Long Short-Term Memory (LSTM) and EXplainable Artificial Intelligence (XAI). Information, 14, 265, doi:10.3390/info14050265.</li>
-<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Alam, S., Pratomo, D.N., Subekti, L., Octava, M.Q.H., Yulianingsih, N.D., Atmaji, F.T.D., Benes, F. (2023) Utilizing Random Forest with IForest-Based Outlier Detection and SMOTE to Detect Movement and Direction of RFID Tags. Future Internet, 15, 103, doi:10.3390/fi15030103.</li>
-<li>Anshari, M., <b>Syafrudin, M.*</b>, Tan, A., Fitriyani, N.L., Alas, Y. (2023) Optimisation of Knowledge Management (KM) with Machine Learning (ML) Enabled. Information, 14, 35, doi:10.3390/info14010035.</li>
-<li>Al-Dulaimi, A.A., Guneser, M.T., Hameed, A.A., Márquez, F.P.G., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Performance Analysis of Classification and Detection for PV Panel Motion Blur Images Based on Deblurring and Deep Learning Techniques. Sustainability, 15, 1150, doi:10.3390/su15021150.</li>
-<li>Zhao, W., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2023) CRAS-YOLO: A Novel Multi-Category Vessel Detection and Classification Model Based on YOLOv5s Algorithm. IEEE Access, 11, 11463–11478, doi:10.1109/ACCESS.2023.3241630.</li>
-<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Bouaissi, A., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Drought Analysis Based on Standardized Precipitation Evapotranspiration Index and Standardized Precipitation Index in Sarawak, Malaysia. Sustainability, 15, 734, doi:10.3390/su15010734.</li>
-<li>Prananda, A.R., Frannita, E.L., Hutami, A.H.T., Maarif, M.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Retinal Nerve Fiber Layer Analysis Using Deep Learning to Improve Glaucoma Detection in Eye Disease Assessment. Applied Sciences, 13, 37, doi:10.3390/app13010037.</li>
-<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Razzaq, A. (2022) Ethical Responsibility and Sustainability (ERS) Development in a Metaverse Business Model. Sustainability, 14, 15805, doi:10.3390/su142315805.</li>
-<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Anshari, M. (2022) A Comprehensive Analysis of Chinese, Japanese, Korean, US-PIMA Indian, and Trinidadian Screening Scores for Diabetes Risk Assessment and Prediction. Mathematics, 10, 4027.</li>
-<li>Maarif, M. R., Listyanda, R. F., Kang, Y. S., & <b>Syafrudin, M.*</b> (2022). Artificial Neural Network Training Using Structural Learning with Forgetting for Parameter Analysis of Injection Molding Quality Prediction. Information, 13(10), 488.</li>
-<li>Alfian, G., <b>Syafrudin, M.*</b>, Fahrurrozi, I., Fitriyani, N.L., Atmaji, F.T.D., Widodo, T., Bahiyah, N., Benes, F., Rhee, J. Predicting Breast Cancer from Risk Factors Using SVM and Extra-Trees-Based Feature Selection Method. <i>Computers</i> 2022, 11, 136, doi:10.3390/computers11090136. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/computers11090136'>[Link]</a></li>
-<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L. Fourth Industrial Revolution between Knowledge Management and Digital Humanities. <i>Information</i> 2022, 13, 292, doi:10.3390/info13060292. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info13060292'>[Link]</a></li>
-<li>Kristanti, R.A., Hadibarata, T., <b>Syafrudin, M.</b>, Yılmaz, M., Abdullah, S. Microbiological Contaminants in Drinking Water: Current Status and Challenges. <i>Water Air Soil Pollut 2022</i>, 233, 299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1007/s11270-022-05698-3'>[Link]</a></li>
-<li>Hadibarata, T., <b>Syafrudin, M.</b> Writing Essay as Essential Assessment in Groundwater Contamination Course. <i>Acta Pedagogia Asia 2022</i>, 1, 9–17, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.53623/apga.v1i1.66'>[Link]</a>.</li>
-<li>Choong, W.S., Hadibarata, T., Yuniarto, A., Tang, K.H.D., Abdullah, F., <b>Syafrudin, M.</b>, Al Farraj, D.A., Al-Mohaimeed, A.M. Characterization of Microplastics in the Water and Sediment of Baram River Estuary, Borneo Island. <i>Marine Pollution Bulletin 2021</i>, 172, 112880, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.marpolbul.2021.112880'>[Link]</a> <i>(SCIE, IF Top 1.327% (2/113) in MARINE & FRESHWATER BIOLOGY, based on JCR 2021)</i>
+<li>Maarif, M.R., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2024) Uncovering Sustainability Insights from Amazon’s Eco-Friendly Product Reviews for Design Optimization. Sustainability 2024, 16, 172, https://doi.org/10.3390/su16010172 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su16010172'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:a0OBvERweLwC'>[GoogleScholar]</a></li>
+<li>Alfian, G., Octava, M.Q.H., Hilmy, F.M., Nurhaliza, R.A., Saputra, Y.M., Putri, D.G.P., Syahrian, F., Fitriyani, N.L., Atmaji, F.T.D., Farooq, U., ... , <b>Syafrudin, M.*</b> (2023) Customer Shopping Behavior Analysis Using RFID and Machine Learning Models. Information 2023, 14, 551. https://doi.org/10.3390/info14100551, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info14100551'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:dfsIfKJdRG4C'>[GoogleScholar]</a></li>
+<li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.eswa.2023.120311'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:3s1wT3WcHBgC'>[GoogleScholar]</a></li>
+<li>Ramaha, N.T.A., Mahmood, R.M., Hameed, A.A., Fitriyani, N.L., Alfian, G., <b>Syafrudin, M.*</b> (2023) Brain Pathology Classification of MR Images Using Machine Learning Techniques. Computers, 12, 167, doi:10.3390/computers12080167, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/computers12080167'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:zA6iFVUQeVQC'>[GoogleScholar]</a></li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Identifying Factors to Develop and Validate Social Vulnerability to Floods in Malaysia: A Systematic Review Study. Sustainability, 15, 12729, doi:10.3390/su151712729, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su151712729'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:u_35RYKgDlwC'>[GoogleScholar]</a></li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Yang, C.-K., Rhee, J., Anshari, M. (2023) Performance Analysis and Assessment of Type 2 Diabetes Screening Scores in Patients with Non-Alcoholic Fatty Liver Disease. Mathematics, 11, 2266, doi:10.3390/math11102266, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/math11102266'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:rO6llkc54NcC'>[GoogleScholar]</a></li>
+<li>Maarif, M.R., Saleh, A.R., Habibi, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Energy Usage Forecasting Model Based on Long Short-Term Memory (LSTM) and EXplainable Artificial Intelligence (XAI). Information, 14, 265, doi:10.3390/info14050265, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info14050265'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:ZHo1McVdvXMC'>[GoogleScholar]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Alam, S., Pratomo, D.N., Subekti, L., Octava, M.Q.H., Yulianingsih, N.D., Atmaji, F.T.D., Benes, F. (2023) Utilizing Random Forest with IForest-Based Outlier Detection and SMOTE to Detect Movement and Direction of RFID Tags. Future Internet, 15, 103, doi:10.3390/fi15030103, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/fi15030103'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:SeFeTyx0c_EC'>[GoogleScholar]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Tan, A., Fitriyani, N.L., Alas, Y. (2023) Optimisation of Knowledge Management (KM) with Machine Learning (ML) Enabled. Information, 14, 35, doi:10.3390/info14010035, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info14010035'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:lSLTfruPkqcC'>[GoogleScholar]</a></li>
+<li>Al-Dulaimi, A.A., Guneser, M.T., Hameed, A.A., Márquez, F.P.G., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Performance Analysis of Classification and Detection for PV Panel Motion Blur Images Based on Deblurring and Deep Learning Techniques. Sustainability, 15, 1150, doi:10.3390/su15021150, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su15021150'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:vV6vV6tmYwMC'>[GoogleScholar]</a></li>
+<li>Zhao, W., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2023) CRAS-YOLO: A Novel Multi-Category Vessel Detection and Classification Model Based on YOLOv5s Algorithm. IEEE Access, 11, 11463–11478, doi:10.1109/ACCESS.2023.3241630, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1109/ACCESS.2023.3241630'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:HoB7MX3m0LUC'>[GoogleScholar]</a></li>
+<li>Isia, I., Hadibarata, T., Jusoh, M.N.H., Bhattacharjya, R.K., Shahedan, N.F., Bouaissi, A., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Drought Analysis Based on Standardized Precipitation Evapotranspiration Index and Standardized Precipitation Index in Sarawak, Malaysia. Sustainability, 15, 734, doi:10.3390/su15010734, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su15010734'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:RYcK_YlVTxYC'>[GoogleScholar]</a></li>
+<li>Prananda, A.R., Frannita, E.L., Hutami, A.H.T., Maarif, M.R., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) Retinal Nerve Fiber Layer Analysis Using Deep Learning to Improve Glaucoma Detection in Eye Disease Assessment. Applied Sciences, 13, 37, doi:10.3390/app13010037, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/app13010037'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:NaGl4SEjCO4C'>[GoogleScholar]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Razzaq, A. (2022) Ethical Responsibility and Sustainability (ERS) Development in a Metaverse Business Model. Sustainability, 14, 15805, doi:10.3390/su142315805, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su142315805'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:RGFaLdJalmkC'>[GoogleScholar]</a></li>
+<li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Ulyah, S.M., Alfian, G., Qolbiyani, S.L., Anshari, M. (2022) A Comprehensive Analysis of Chinese, Japanese, Korean, US-PIMA Indian, and Trinidadian Screening Scores for Diabetes Risk Assessment and Prediction. Mathematics, 10, 4027, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/math10214027'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&cstart=20&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:ns9cj8rnVeAC'>[GoogleScholar]</a></li>
+<li>Maarif, M. R., Listyanda, R. F., Kang, Y. S., & <b>Syafrudin, M.*</b> (2022). Artificial Neural Network Training Using Structural Learning with Forgetting for Parameter Analysis of Injection Molding Quality Prediction. Information, 13(10), 488, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info13100488'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&cstart=20&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:BqipwSGYUEgC'>[GoogleScholar]</a></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Fahrurrozi, I., Fitriyani, N.L., Atmaji, F.T.D., Widodo, T., Bahiyah, N., Benes, F., Rhee, J. Predicting Breast Cancer from Risk Factors Using SVM and Extra-Trees-Based Feature Selection Method. <i>Computers</i> 2022, 11, 136, doi:10.3390/computers11090136, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/computers11090136'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&cstart=20&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:JV2RwH3_ST0C'>[GoogleScholar]</a></li>
+<li>Anshari, M., <b>Syafrudin, M.*</b>, Fitriyani, N.L. Fourth Industrial Revolution between Knowledge Management and Digital Humanities. <i>Information</i> 2022, 13, 292, doi:10.3390/info13060292. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info13060292'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&cstart=20&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:9ZlFYXVOiuMC'>[GoogleScholar]</a></li>
+<li>Kristanti, R.A., Hadibarata, T., <b>Syafrudin, M.</b>, Yılmaz, M., Abdullah, S. Microbiological Contaminants in Drinking Water: Current Status and Challenges. <i>Water Air Soil Pollut 2022</i>, 233, 299, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1007/s11270-022-05698-3'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:isC4tDSrTZIC'>[GoogleScholar]</a></li>
+<li>Hadibarata, T., <b>Syafrudin, M.</b> Writing Essay as Essential Assessment in Groundwater Contamination Course. <i>Acta Pedagogia Asia 2022</i>, 1, 9–17, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.53623/apga.v1i1.66'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:dhFuZR0502QC'>[GoogleScholar]</a>.</li>
+<li>Choong, W.S., Hadibarata, T., Yuniarto, A., Tang, K.H.D., Abdullah, F., <b>Syafrudin, M.</b>, Al Farraj, D.A., Al-Mohaimeed, A.M. Characterization of Microplastics in the Water and Sediment of Baram River Estuary, Borneo Island. <i>Marine Pollution Bulletin 2021</i>, 172, 112880, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.marpolbul.2021.112880'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:4DMP91E08xMC'>[GoogleScholar]</a> <i>(SCIE, IF Top 1.327% (2/113) in MARINE & FRESHWATER BIOLOGY, based on JCR 2021)</i>
 </li>
-<li><b>Syafrudin, M.</b>, Kristanti, R.A., Yuniarto, A., Hadibarata, T., Rhee, J., Al-onazi, W.A., Algarni, T.S., Almarri, A.H., Al-Mohaimeed, A.M. Pesticides in Drinking Water—A Review. <i>IJERPH 2021</i>, 18, 468, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/ijerph18020468'>[Link]</a> <i>(SSCI, IF Top 23.580% (42/176) in PUBLIC, ENVIRONMENTAL & OCCUPATIONAL HEALTH, based on JCR 2020)</i>.
+<li><b>Syafrudin, M.</b>, Kristanti, R.A., Yuniarto, A., Hadibarata, T., Rhee, J., Al-onazi, W.A., Algarni, T.S., Almarri, A.H., Al-Mohaimeed, A.M. Pesticides in Drinking Water—A Review. <i>IJERPH 2021</i>, 18, 468, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/ijerph18020468'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:k_IJM867U9cC'>[GoogleScholar]</a><i>(SSCI, IF Top 23.580% (42/176) in PUBLIC, ENVIRONMENTAL & OCCUPATIONAL HEALTH, based on JCR 2020)</i>.
 </li>
-<li>Alfian, G., <b>Syafrudin, M.*</b>, Anshari, M., Benes, F., Atmaji, F.T.D., Fahrurrozi, I., Hidayatullah, A.F., Rhee, J. Blood glucose prediction model for type 1 diabetes based on artificial neural network with time-domain features. <i>Biocybernetics and Biomedical Engineering 2020</i>, 40, 1586–1599. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.bbe.2020.10.004'>[Link]</a> <i>(SCIE, IF Top 45.402% (40/87) in ENGINEERING, BIOMEDICAL, based on JCR 2019)</i></li>
+<li>Alfian, G., <b>Syafrudin, M.*</b>, Anshari, M., Benes, F., Atmaji, F.T.D., Fahrurrozi, I., Hidayatullah, A.F., Rhee, J. Blood glucose prediction model for type 1 diabetes based on artificial neural network with time-domain features. <i>Biocybernetics and Biomedical Engineering 2020</i>, 40, 1586–1599. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.bbe.2020.10.004'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&pagesize=80&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:YOwf2qJgpHMC'>[GoogleScholar]</a> <i>(SCIE, IF Top 45.402% (40/87) in ENGINEERING, BIOMEDICAL, based on JCR 2019)</i></li>
 <li>Alfian, G., <b>Syafrudin, M.*</b>, Fitriyani, N.L., Anshari, M., Stasa, P., Svub, J., Rhee, J. Deep Neural Network for Predicting Diabetic Retinopathy from Risk Factors. <i>Mathematics 2020</i>, 8, 1620. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091620'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M., Hadibarata, T., Fatwanto, A., Rhee, J. A Self-Care Prediction Model for Children with Disability Based on Genetic Algorithm and Extreme Gradient Boosting. <i>Mathematics 2020</i>, 8, 1590. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math8091590'>[Link]</a> <i>(SCIE, IF Top 8.488% (28/324) in MATHEMATICS, based on JCR 2019)</i></li>
 <li>Fitriyani, N.L., <b>Syafrudin, M.*</b>, Alfian, G., Rhee, J. HDPM: An Effective Heart Disease Prediction Model for a Clinical Decision Support System. <i>IEEE Access 2020</i>, 8, pp. 1-17. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/access.2020.3010511'>[Link]</a> <i>(SCIE, IF Top 22.115% (35/156) in COMPUTER SCIENCE, INFORMATION SYSTEMS, based on JCR 2019)</i></li>
@@ -58,13 +58,13 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [C] Conference Proceedings
 <ol reversed>
-<li>Asrol, M., Wahyudi, S.; Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529.</li>
-<li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>.</li>
+<li>Asrol, M., Wahyudi, S.; Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
+<li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
 <li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6.</li>
-<li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126. https://doi.org/10.1109/ICITACEE58587.2023.10277046</li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a></li>
-<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a></li>
-<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a></li>
+<li>Sugiantoro, B., Humam, A. I., Fitriyani, N. L., Alfian, G., Maarif, M. R., & <b>Syafrudin, M.</b> (2023). Utilizing Latent Dirichlet Allocation for Analyzing Topics in Undergraduate Theses. 2023 10th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE), 121–126, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICITACEE58587.2023.10277046'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICITACEE58587.2023.10277046'>[GoogleScholar]</a></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Hadibarata, T., Rhee, J., Anshari, M. Future Glycemic Events Prediction Model Based On Artificial Neural Network. In Proceedings of the 2022 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT), IEEE: Sakheer, Bahrain, November 20 2022, pp. 151–155.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT56508.2022.9990708'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT56508.2022.9990708'>[GoogleScholar]</a></li>
+<li>Fitriyani, N. L., <b>Syafrudin, M.</b>, Alfian, G., Yang, C. K., Rhee, J., & Ulyah, S. M. Chronic Disease Prediction Model Using Integration of DBSCAN, SMOTE-ENN, and Random Forest. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 289-294). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888806'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICETSIS55481.2022.9888806'>[GoogleScholar]</a></li>
+<li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N. L., Fahrurrozi, I., Anshari, M., & Rhee, J. A Personalized Blood Glucose Prediction Model Using Random Forest Regression. In 2022 ASU International Conference in Emerging Technologies for Sustainability and Intelligent Systems (ICETSIS) (pp. 295-299). IEEE.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ICETSIS55481.2022.9888838'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/ICETSIS55481.2022.9888838'>[GoogleScholar]</a></li>
 <li>Fitriyani, N. L., <b>Syafrudin, M.</b>, & Alfian, G. Improving Accuracy of Machine Learning-Based Prediction Model for Heart Disease Classification Using Information Gain and DBSCAN. In KMIS International Conference (pp. 506-509).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416370'>[Link]</a></li>
 <li><b>Syafrudin, M.</b>, Fitriyani, N. L., & Alfian, G. Forecasting Blood Glucose Using Extreme Gradient Boosting Regression Model. In KMIS International Conference (pp. 501-505).<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.earticle.net/Article/A416369'>[Link]</a></li>
 <li>Fitriyani, N.L., <b>Syafrudin, M.</b>, Alfian, G., Fatwanto, A., Qolbiyani, S.L., Rhee, J. Prediction Model for Type 2 Diabetes Using Stacked Ensemble Classifiers. In Proceedings of the 2020 International Conference on Decision Aid Sciences and Application (DASA), IEEE: Sakheer, Bahrain, November 8 2020, pp. 399–402.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/DASA51403.2020.9317090'>[Link]</a></li>
