--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -5,7 +5,7 @@ title: Publications
 # Publications
 The output of our research and projects has been presented and published in many outlets, including local and international conferences as well as reputable international peer-reviewed journals. For a comprehensive and up-to-date list of publications, please refer to the following links.
 
-Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?user=WLTzkOMAAAAJ&hl=en'>[GoogleScholar]</a> 
+Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a> 
 
 <highlight  color="#1877F2"><i>Note: J = journal, C = conference, B = book/chapter, and * = corresponding author.</i> </highlight>
 <br/>
