--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -44,7 +44,7 @@ Department of Artificial Intelligence, Sejong University, Korea
 <br/>Email: ahyunclara[at]sju.ac.kr
 <br/>Publications:
 <ul>
-<li>[First author] <b>Lee, A.</b>, Syafrudin, M., Gu, Y. H., Park, S., Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6.</li>
+<li>[First author] <b>Lee, A.</b>, Syafrudin, M., Gu, Y. H., Park, S., Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a></li>
 </ul>
 </div>
 </div>
@@ -58,7 +58,7 @@ Department of Artificial Intelligence, Sejong University, Korea
 <br/>Email: sujin76[at]sju.ac.kr
 <br/>Publications:
 <ul>
-<li>[Co-author] Lee, A., Syafrudin, M., Gu, Y. H., <b>Park, S.</b>, Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6.</li>
+<li>[Co-author] Lee, A., Syafrudin, M., Gu, Y. H., <b>Park, S.</b>, Kim, M., & Lee, Y. (2023). <i>A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews</i>. 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a></li>
 </ul>
 </div>
 </div>
