--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -13,6 +13,8 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 
 ### [J] Journal Articles
 <ol reversed>
+
+<li>Abdulrazzaq, M.M.; Ramaha, N.T.A.; Hameed, A.A.; Salman, M.; Yon, D.K.; Fitriyani, N.L.; <b>Syafrudin, M.*</b>; Lee, S.W. Consequential Advancements of Self-Supervised Learning (SSL) in Deep Learning Contexts. Mathematics 2024, 12, 758. https://doi.org/10.3390/math12050758 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12050758'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:pyW8ca7W8N0C'>[GoogleScholar]</a></li>
 <li>Maarif, M.R., <b>Syafrudin, M.*</b>, Fitriyani, N.L. (2024) Uncovering Sustainability Insights from Amazon’s Eco-Friendly Product Reviews for Design Optimization. Sustainability 2024, 16, 172, https://doi.org/10.3390/su16010172 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/su16010172'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:a0OBvERweLwC'>[GoogleScholar]</a></li>
 <li>Alfian, G., Octava, M.Q.H., Hilmy, F.M., Nurhaliza, R.A., Saputra, Y.M., Putri, D.G.P., Syahrian, F., Fitriyani, N.L., Atmaji, F.T.D., Farooq, U., ... , <b>Syafrudin, M.*</b> (2023) Customer Shopping Behavior Analysis Using RFID and Machine Learning Models. Information 2023, 14, 551. https://doi.org/10.3390/info14100551, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.3390/info14100551'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:dfsIfKJdRG4C'>[GoogleScholar]</a></li>
 <li>Nasir, I.M., Raza, M., Ulyah, S.M., Shah, J.H., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2023) ENGA: Elastic Net-Based Genetic Algorithm for Human Action Recognition. Expert Systems with Applications, 227, 120311, doi:10.1016/j.eswa.2023.120311, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.eswa.2023.120311'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:3s1wT3WcHBgC'>[GoogleScholar]</a></li>
